--- a/landingpage/package.json
+++ b/landingpage/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@vercel/analytics": "^1.1.1",
     "heroicons-react": "^1.4.1",
     "next": "13.5.6",
     "react": "^18",
